# actix-todo-sea-orm

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: .env.example  Cargo.toml
app/database/: er.a5er
app/database/migrations/: 20230512134228_create_todos_table.sql  20230513093036_create_todos_table.down.sql  20230513093036_create_todos_table.up.sql
app/entity/: Cargo.toml
app/entity/src/: lib.rs  prelude.rs  todos.rs
app/migration/: Cargo.toml
app/migration/src/: m20220101_000001_create_todos_table.rs
app/src/: lib.rs  main.rs  types.rs  utils.rs
app/src/configure/: mod.rs  response.rs
app/src/configure/router/: mod.rs  todos.rs
app/src/configure/router/todo/: delete_todo.rs  get_todo.rs  get_todos.rs  mod.rs  patch_todo.rs  post_todo.rs
app/src/domain/: mod.rs  repository.rs  todo.rs
app/src/domain/value/: todo.rs
app/src/http/: mod.rs  request.rs  response.rs
app/src/http/controller/todo/: delete_todo.rs  get_todo.rs  get_todos.rs  mod.rs  patch_todo.rs  post_todo.rs
app/src/http/router/: mod.rs  todo.rs
app/src/http/router/todo/: delete_todo.rs  get_todo.rs  get_todos.rs  mod.rs  patch_todo.rs  post_todo.rs
app/src/infrastructure/: mod.rs  resporitory.rs
app/src/logger/: config.json  logger.rs  mod.rs
app/src/router/todo/: delete_todo.rs  get_todo.rs  get_todos.rs  patch_todo.rs  post_todo.rs
app/tests/: test.rs  utils.rs
docker/rust/: Dockerfile
