[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple-log = "1.6.0"
thiserror = "1.0.40"
sea-orm = { version = "^0.11", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-actix-rustls", "macros" ] }
